@@ -45,7 +45,7 @@ function(file, header = FALSE, sep = "", quote = "\"'", dec = ".",
          strip.white = FALSE, blank.lines.skip = TRUE,
          comment.char = "#", allowEscapes = FALSE, flush = FALSE,
          stringsAsFactors = default.stringsAsFactors(),
-         fileEncoding = "", encoding = "unknown", text)
+         fileEncoding = "", encoding = "unknown", text, skipNul = FALSE)
 {
     if (missing(file) && !missing(text)) {
 	file <- textConnection(text)
@@ -68,7 +68,7 @@ function(file, header = FALSE, sep = "", quote = "\"'", dec = ".",
     nlines <- n0lines <- if (nrows < 0L) 5 else min(5L, (header + nrows))
 
     lines <- .External(C_readtablehead, file, nlines, comment.char,
-                       blank.lines.skip, quote, sep)
+                       blank.lines.skip, quote, sep, skipNul)
     nlines <- length(lines)
     if(!nlines) {
         if(missing(col.names)) stop("no lines available in input")
@@ -85,7 +85,7 @@ function(file, header = FALSE, sep = "", quote = "\"'", dec = ".",
                       strip.white = TRUE,
                       blank.lines.skip = blank.lines.skip,
                       comment.char = comment.char, allowEscapes = allowEscapes,
-                      encoding = encoding)
+                      encoding = encoding, skipNul = skipNul)
         col1 <- if(missing(col.names)) length(first) else length(col.names)
         col <- numeric(nlines - 1L)
         if (nlines > 1L)
@@ -96,7 +96,8 @@ function(file, header = FALSE, sep = "", quote = "\"'", dec = ".",
                                       strip.white = strip.white,
                                       blank.lines.skip = blank.lines.skip,
                                       comment.char = comment.char,
-                                      allowEscapes = allowEscapes))
+                                      allowEscapes = allowEscapes,
+                                      skipNul = skipNul))
         cols <- max(col1, col)
 
         ##	basic column counting and header determination;
@@ -110,7 +111,7 @@ function(file, header = FALSE, sep = "", quote = "\"'", dec = ".",
         if (header) {
             ## skip over header
            .External(C_readtablehead, file, 1L, comment.char,
-                     blank.lines.skip, quote, sep)
+                     blank.lines.skip, quote, sep, skipNul)
             if(missing(col.names)) col.names <- first
             else if(length(first) != length(col.names))
                 warning("header and 'col.names' are of different lengths")
@@ -163,7 +164,7 @@ function(file, header = FALSE, sep = "", quote = "\"'", dec = ".",
                  strip.white = strip.white,
                  blank.lines.skip = blank.lines.skip, multi.line = FALSE,
                  comment.char = comment.char, allowEscapes = allowEscapes,
-                 flush = flush, encoding = encoding)
+                 flush = flush, encoding = encoding, skipNul = skipNul)
 
     nlines <- length(data[[ which.max(keep) ]])
 
