@@ -80,6 +80,7 @@ typedef struct
     int save;                 /* = 0; */
     Rboolean isLatin1;        /* = FALSE */
     Rboolean isUTF8;          /* = FALSE */
+    Rboolean skipNul;
     char convbuf[100];
 } LocalData;
 
@@ -225,7 +226,18 @@ static Rcomplex strtoc(const char *nptr, char **endptr, Rboolean NA, LocalData *
 
 static R_INLINE int scanchar_raw(LocalData *d)
 {
-    return (d->ttyflag) ? ConsoleGetcharWithPushBack(d->con) : Rconn_fgetc(d->con);
+    int c = (d->ttyflag) ? ConsoleGetcharWithPushBack(d->con) : Rconn_fgetc(d->con);
+    if (c == 0)
+    {
+        if (d->skipNul)
+        {
+            do
+            {
+                c = (d->ttyflag) ? ConsoleGetcharWithPushBack(d->con) : Rconn_fgetc(d->con);
+            } while (c == 0);
+        }
+    }
+    return c;
 }
 
 static R_INLINE void unscanchar(int c, LocalData *d)
@@ -921,11 +933,11 @@ SEXP menu(SEXP choices)
 SEXP readtablehead(SEXP args)
 {
     SEXP file, comstr, ans = R_NilValue, ans2, quotes, sep;
-    int nlines, i, c, quote = 0, nread, nbuf, buf_size = BUF_SIZE, blskip;
+    int nlines, i, c, quote = 0, nread, nbuf, buf_size = BUF_SIZE, blskip, skipNul;
     const char *p;
     char *buf;
     Rboolean empty, skip, firstnonwhite;
-    LocalData data = {NULL, 0, 0, '.', NULL, NO_COMCHAR, 0, NULL, FALSE, FALSE, 0, FALSE, FALSE};
+    LocalData data = {NULL, 0, 0, '.', NULL, NO_COMCHAR, 0, NULL, FALSE, FALSE, 0, FALSE, FALSE, FALSE};
     data.NAstrings = R_NilValue;
 
     args = CDR(args);
@@ -941,6 +953,8 @@ SEXP readtablehead(SEXP args)
     quotes = CAR(args);
     args = CDR(args);
     sep = CAR(args);
+    args = CDR(args);
+    skipNul = asLogical(CAR(args));
 
     if (nlines <= 0 || nlines == NA_INTEGER)
         error(_("invalid '%s' argument"), "nlines");
@@ -977,6 +991,9 @@ SEXP readtablehead(SEXP args)
     }
     else
         error(_("invalid '%s' argument"), "sep");
+    if (skipNul == NA_LOGICAL)
+        error(_("invalid '%s' argument"), "skipNul");
+    data.skipNul = skipNul;
 
     i = asInteger(file);
     data.con = getConnection(i);
