@@ -696,7 +696,7 @@ FUNTAB R_FunTab[] = {
     {"radixsort", do_radixsort, 0, 11, 3, {PP_FUNCALL, PREC_FN, 0}},
     {"order", do_order, 0, 11, -1, {PP_FUNCALL, PREC_FN, 0}},
     {"rank", do_rank, 0, 11, 3, {PP_FUNCALL, PREC_FN, 0}},
-    {"scan", do_scan, 0, 11, 18, {PP_FUNCALL, PREC_FN, 0}},
+    {"scan", do_scan, 0, 11, 19, {PP_FUNCALL, PREC_FN, 0}},
     {"t.default", do_transpose, 0, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
     {"aperm", do_aperm, 0, 11, 3, {PP_FUNCALL, PREC_FN, 0}},
     {"builtins", do_builtins, 0, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
@@ -812,7 +812,7 @@ FUNTAB R_FunTab[] = {
     {"stdout", do_stdout, 0, 11, 0, {PP_FUNCALL, PREC_FN, 0}},
     {"stderr", do_stderr, 0, 11, 0, {PP_FUNCALL, PREC_FN, 0}},
     {"isatty", do_isatty, 0, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
-    {"readLines", do_readLines, 0, 11, 5, {PP_FUNCALL, PREC_FN, 0}},
+    {"readLines", do_readLines, 0, 11, 6, {PP_FUNCALL, PREC_FN, 0}},
     {"writeLines", do_writelines, 0, 111, 4, {PP_FUNCALL, PREC_FN, 0}},
     {"readBin", do_readbin, 0, 11, 6, {PP_FUNCALL, PREC_FN, 0}},
     {"writeBin", do_writebin, 0, 211, 5, {PP_FUNCALL, PREC_FN, 0}},
